--- a/README
+++ b/README
@@ -1,7 +1,18 @@
-Spring + MyBatis Maven Project Template for Standalone Application.
+## 개요
 
-Sample Table.
+본 프로젝트는 ExtJS 학습을 위해서 Spring Framework, MyBATIS, ExtJS로 구성된 예제 프로젝트입니다.
 
+## 요구사항
+
+* ExtJS 6
+* Sencha Cmd 6
+* Apache Tomcat 7
+* JDK 1.7
+* MySQL 5.5
+
+## 샘플 테이블
+
+``
 CREATE TABLE USER (
         ID BIGINT NOT NULL AUTO_INCREMENT,
         USER_NM VARCHAR(50) NOT NULL,
@@ -9,5 +20,4 @@ CREATE TABLE USER (
         NM VARCHAR(50) NOT NULL,
         PRIMARY KEY (ID)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
-
-This file was modified by IntelliJ IDEA 12.0 for binding GitHub repository
+```
